add DynamoDB ChatHistory

--- a/package.json
+++ b/package.json
@@ -10,10 +10,36 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
+    "@aws-crypto/sha256-js": "^5.2.0",
+    "@aws-sdk/client-dynamodb": "^3.667.0",
+    "@aws-sdk/client-secrets-manager": "^3.667.0",
+    "@aws-sdk/credential-provider-node": "^3.666.0",
+    "@aws-sdk/node-http-handler": "^3.374.0",
+    "@aws-sdk/types": "^3.664.0",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@langchain/community": "^0.3.4",
+    "@langchain/core": "^0.3.8",
+    "@langchain/openai": "^0.3.5",
+    "@mui/icons-material": "^6.1.2",
+    "@mui/material": "^6.1.2",
+    "@mui/styled-engine-sc": "^6.1.2",
+    "@reduxjs/toolkit": "^2.2.8",
+    "@smithy/eventstream-codec": "^2.2.0",
+    "@smithy/protocol-http": "^3.3.0",
+    "@smithy/signature-v4": "^2.3.0",
+    "@smithy/util-utf8": "^2.3.0",
+    "@tanstack/react-query": "^5.59.0",
     "aws-amplify": "^6.4.0",
+    "axios": "^1.7.7",
+    "langchain": "^0.3.2",
     "next": "14.1.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
+    "styled-components": "^6.1.13"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.2.1",
@@ -21,10 +47,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "aws-cdk": "^2",
     "aws-cdk-lib": "^2",
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.13",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
   }
