--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "@aws-sdk/types": "^3.664.0",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@fontsource/inter": "^5.1.0",
     "@fontsource/roboto": "^5.1.0",
     "@langchain/community": "^0.3.4",
     "@langchain/core": "^0.3.8",
     "@langchain/openai": "^0.3.5",
+    "@mui/base": "^5.0.0-beta.58",
     "@mui/icons-material": "^6.1.2",
+    "@mui/joy": "^5.0.0-beta.48",
     "@mui/material": "^6.1.2",
     "@mui/styled-engine-sc": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.8",
@@ -30,7 +33,7 @@
     "@smithy/protocol-http": "^3.3.0",
     "@smithy/signature-v4": "^2.3.0",
     "@smithy/util-utf8": "^2.3.0",
-    "@tanstack/react-query": "^5.59.0",
+    "@tanstack/react-query": "^4.36.1",
     "aws-amplify": "^6.4.0",
     "axios": "^1.7.7",
     "langchain": "^0.3.2",
