--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@mui/base": "^5.0.0-beta.58",
     "@mui/icons-material": "^6.1.2",
     "@mui/joy": "^5.0.0-beta.48",
+    "@mui/lab": "^6.0.0-beta.11",
     "@mui/material": "^6.1.2",
     "@mui/styled-engine-sc": "^6.1.2",
     "@reduxjs/toolkit": "^2.2.8",
@@ -37,11 +38,20 @@
     "aws-amplify": "^6.4.0",
     "axios": "^1.7.7",
     "langchain": "^0.3.2",
+    "langfuse": "^3.27.0",
+    "langfuse-langchain": "^3.27.0",
     "next": "14.1.1",
     "react": "^18",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
     "react-redux": "^9.1.2",
+    "react-syntax-highlighter": "^15.5.0",
     "redux": "^5.0.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
     "styled-components": "^6.1.13"
   },
   "devDependencies": {
@@ -49,7 +59,9 @@
     "@aws-amplify/backend-cli": "^1.2.6",
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "autoprefixer": "^10.4.20",
     "aws-cdk": "^2",
     "aws-cdk-lib": "^2",
